--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,12 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  
+  
+  
+
 }
 
 .profile-image {
@@ -45,4 +51,8 @@ a {
 
 ul {
   list-style-type: none;
+  
+}
+
+  
 }
