--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  margin-top: 32px;
+  justify-content: center;
+  gap: 52px;
+  
+}
+
+.box1, .box2, .box3, .box4 {
+
+  max-width: 500px;
+  
+  
+  
+  
+  
 }
 
 /* do not edit this footer */
