--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+ 
 }
 
 img {
@@ -25,3 +28,38 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+ul {
+  list-style-type: none;
+  display: flex;
+  gap: 15px;
+  margin: 0px;
+  padding: 0px;
+
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;
+  flex: 1;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+
