--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -6,22 +6,36 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 10px auto;
+  padding: 4px;
+  
 }
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 4px 4px 8px 4px; 
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px 4px;
+  padding: 16px 8px 16px 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 4px;
+  padding: 8px;
+  text-align: center;
+  display: block;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  margin: 8px auto;
+  display: block;
+  padding: 8px 24px;
 }
